# django-complete-jwt

./: .gitignore  LICENSE.txt  README.md  manage.py  requirements.txt  setup.cfg  setup.py
dcj_test_site/: asgi.py  settings.py  urls.py  wsgi.py
django_complete_jwt/: __init__.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
django_complete_jwt_test_site/: asgi.py  settings.py  urls.py  wsgi.py
