[bdist_wheel]

[metadata]
license_file = LICENSE.txt
author = Paul Martin
url = https://github.com/primal100/django-complete-jwt
description = JWT Features
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    django_complete_jwt
python_requires>=3.8
install_requires =
    django
    djangorestframework
    rest_framework_simplejwt
    social-auth-core
    social-auth-app-django
